# djagger

./: .gitignore  MANIFEST.in  changelog.md  readme.md  readme.rst  requirements.txt  setup.cfg
.github/workflows/: python-package.yml
djagger/: apps.py  config.py  decorators.py  enums.py  generics.py  openapi.py  schema.py  serializers.py  swagger.py  tests.py  types.py  urls.py  utils.py  views.py
djagger.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
djagger/management/commands/: djagger_document.py
djagger/templates/: redoc.html
djagger/templates/djagger/: redoc.html
djagger/tests/: conftest.py  models.py  test_decorators.py  test_document.py  test_enums.py  test_generics.py  test_schemas.py  test_serializers.py  test_urls.py  test_views.py  tests.py  urls.py  views.py
djagger/tests/example/: readme.txt
djagger/tests/example/app1/: schemas.py  urls.py  views.py
djagger/tests/example/example/: settings.py  urls.py
djagger/tests/openapi/: test_component.py  test_operation.py  test_schema.py
djagger/tests/schema/: test_endpoint.py  test_info.py  test_path.py  test_schema.py
djagger/tests/swagger/: test_endpoint.py  test_info.py  test_path.py  test_schema.py
docs/source/: api.rst  conf.py  contributing.rst  getting_started.rst  index.rst  release_history.rst  user_guide.rst
