[metadata]
name = djagger
version = 1.1.2
description = OpenAPI 3 documentation generator for Django using pydantic.
long_description_content_type = text/x-rst
long_description = file: readme.rst
url = https://github.com/royhzq/djagger
download_url = https://github.com/royhzq/djagger/archive/refs/tags/v0.1.0-alpha.tar.gz
author = Roy
author_email = royhung@protonmail.com
license = MIT License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0  
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 3.0
    pydantic >= 1.7
    djangorestframework>=3.10

[mypy]
ignore_missing_imports = True